--- a/exercise4/css/styles.css
+++ b/exercise4/css/styles.css
@@ -1,4 +1,3 @@
-<style>
 h1 {font-size:48px;}
 post-heading {
   text-decoration-color:#006633;
@@ -10,8 +9,8 @@ post-heading {
 blockquote {text-decoration-color: #33cff;
 font-size:1.3em;
 }
-
-</style>
+body{text-decoration-color:#777}
+post-heading{h3}
 
 <body>
 <div class="post-heading">
