--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-<style>
 h1 {font-size:48px;}
+
 post-heading {
   text-decoration-color:#006633;
   font-size:1.8em;
@@ -10,10 +10,9 @@ post-heading {
 blockquote {text-decoration-color: #33cff;
 font-size:1.3em;
 }
+body{text-decoration-color:#777}
 
-</style>
+post-heading{h3}
 
-<body>
 <div class="post-heading">
 <h1 id="main-nav">main-nav</h1>
-</body>
